--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'  # Используйте версию Node.js, совместимую с Newman
+          node-version: '20'  # Используйте версию Node.js, совместимую с Newman
 
       # Шаг 3: Установка Newman
       - name: Install Newman
@@ -28,5 +28,5 @@ jobs:
       # Шаг 4: Запуск тестов Postman через Newman
       - name: Run Postman tests
         run: |
-          newman run ./Postman Collections/PostmanBook.json -r htmlextra
+          newman run ./Postman\ Collections/PostmanBook.json -r htmlextra
           
