--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
+  schedule:
+    - cron: '0 9 * * *'  # Запуск каждый день в 09:00 UTC (12:00 MSK)
 
 jobs:
   build:
